fixed column height and added scroll to overflow

--- a/src/Components/Kanban_components/kanban_styles.css
+++ b/src/Components/Kanban_components/kanban_styles.css
@@ -1,5 +1,6 @@
 .container {
     width: 100%;
+    height: 100%;
     margin: 0 auto;
     display: flex;
     background: rgb(240, 235, 235);
@@ -9,6 +10,7 @@
 .column {
     background-color: rgb(253, 247, 247);
     width: 20%;
+    height: 100px;
     padding: 10%;
     margin-left: 10%;
     margin-right: 10%;
